tests/badinc5.mak
/ pos=fail warn=1 error=1
# ba
ck/comment here should be ignored/re/comment to end of line
ad.dat ,
C1 [m,10.23,20.47,1234.56];
#nosuchfile.dat,
GX1 [f -100.00 -200.00 3600.00];
